design changes on larger screens

--- a/index.html
+++ b/index.html
@@ -194,6 +194,28 @@
                 <img src="" alt="" srcset="">
                 <a href="http://">Shop Now</a>
             </div>
+
+            <div class="border border-[#B35920] border">
+                <div>
+                    <p>Adire T-shirts</p>
+                </div>
+
+                <div>
+                    <p>Slides</p>
+                </div>
+
+                <div>
+                    <p>Bedspread and Pillows</p>
+                </div>
+
+                <div>
+                    <p>Adire Bags</p>
+                </div>
+
+                <div>
+                    <p>Trainings</p>
+                </div>
+            </div>
         </div>
     </section>
 
