training section designed

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
     </section>
 
-    <section class="py-[87px]">
+    <section class="pt-[87px]">
         <div class="flex lg:gap-[91px]">
             <div class="grid grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%]">
                 <img src="dist/images/pic4.jpg" alt="" srcset="">
@@ -220,22 +220,22 @@
         </div>
     </section>
 
-    <section class="py-[72px]">
-        <img src="" alt="" srcset="">
+    <section class="py-[72px] flex items-center justify-between">
+        <img src="dist/images/pic8.jpg" alt="" srcset="">
 
-        <div>
-            <h1>
+        <div class="basis-[40%]">
+            <h1 class="font-semibold text-[32px] leading-[39px] mb-5">
                 Join our 
-                <span>Training</span>
+                <span class="text-[#B35920]">Training</span>
             </h1>
 
-            <p>
+            <p class="font-normal text-[16px] leading-[32px] mb-10">
                 We train individuals who are passionate about culture and <br>
                 fashion. We have produced thousands of individuals from our <br>
                 training school.
             </p>
 
-            <a href="http://">Learn More</a>
+            <a href="http://" class="text-[#B35920] border border-[#B35920] py-3 px-6 rounded-[10px] hover:text-[#ffffff] hover:bg-[#B35920] text-[18px] font-bold">Learn More</a>
         </div>
     </section>
 
