--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="dist/output.css" rel="stylesheet">
     <link rel="stylesheet" href="input.css">
+    <script src="https://kit.fontawesome.com/54e86b48e4.js" crossorigin="anonymous"></script>
     <title>MEELAH'S THRIFT STORE</title>
 </head>
-<body class="lg:px-[100px]">
-    <header class="">
+<body class="">
+    <header class="lg:px-[100px]">
         <nav class="flex justify-between mb-16 items-center pt-10">
             <div class="logo">
                 <h1 class="text-[#000000] font-bold text-[28px] leading-6">Meelah'sThriftStore</h1>
@@ -100,7 +101,7 @@
         </div>
     </header>
 
-    <section class="flex justify-between items-start pb-10">
+    <section class="flex justify-between items-start pb-10 lg:px-[100px]">
         <span class="relative">
             <img src="dist/images/Frame.svg" alt="" class="absolute -left-3">
             <h2 class="font-semibold text-[32px] leading-[51px]">
@@ -152,7 +153,7 @@
         </div>
     </section>
 
-    <section class="pt-[87px]">
+    <section class="pt-[87px] lg:px-[100px]">
         <div class="flex lg:gap-[91px]">
             <div class="grid grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%]">
                 <img src="dist/images/pic4.jpg" alt="" srcset="">
@@ -188,7 +189,7 @@
         </div>
     </section>
 
-    <section class="py-[76px]">
+    <section class="py-[76px] lg:px-[100px]">
         <div class="relative my-8">
             <h1 class="font-bold text-[48px] text-[#333333] leading-[77px] absolute top-10">New Arrivals</h1>
             <h1 class="text-[#33333333] text-[96px] font-bold leading-[117px">New Arrivals</h1>
@@ -220,7 +221,7 @@
         </div>
     </section>
 
-    <section class="py-[72px] flex items-center justify-between">
+    <section class="py-[72px] flex items-center justify-between lg:px-[100px]">
         <img src="dist/images/pic8.jpg" alt="" srcset="">
 
         <div class="basis-[40%]">
@@ -239,27 +240,31 @@
         </div>
     </section>
 
-    <section>
-        <div>
-            <p>Subscribe Newsletters</p>
+    <section class="px-0 relative mb-[75px]">
+        <img src="dist/images/Shape.svg" alt="" srcset="" class="">
+        <div class="py-[75px] px-[96px]  bg-[#B35920] w-[85%] lg:mx-[100px] flex items-center justify-between rounded-[12px]  absolute top-[60px] shadow-md shadow-[#B359204D]">
+            <p class="font-normal leading-10 text-[33px] text-[#ffffff]">Subscribe Newsletters</p>
 
-            <span>
-                <input type="email" name="email" id="mail">
-                <a href="mailto:">Subscribe Now</a>
+            <span class="relative">
+                <input type="email" name="email" id="mail" placeholder="Enter your email" class="py-[30px] px-[28px] w-[500px] rounded-[5px] outline-none">
+                <a href="mailto:" class="font-normal leading-[23px] text-[19px] py-[18.66px] px-[44.33px] text-[#ffffff] bg-[#333333] absolute top-[10px] right-[25px] border border-[#333333] hover:bg-transparent hover:text-[#333333]">Subscribe Now</a>
             </span>
         </div>
     </section>
 
-    <footer class="border-b border-[#2B3D51]">
-        <div>
-            <a href="http://">About us</a>
-            <a href="http://">Training</a>
-            <a href="http://">Explore</a>
-            <a href="http://">Features</a>
-        </div>
-
-        <div>
-
+    <footer class="border-b border-[#2B3D51] mt-[120px] px-[96px]">
+        <div class="flex items-center justify-between">
+            <div class="flex font-semibold text-[19px] leading-[23px] w-1/2 justify-between">
+                <a href="http://">About us</a>
+                <a href="http://">Training</a>
+                <a href="http://">Explore</a>
+                <a href="http://">Features</a>
+            </div>
+    
+            <div>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
         </div>
     </footer>
 </body>
