--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
         </div>
     </section>
 
-    <footer class="border-b border-[#2B3D51] mt-[120px] px-[96px]">
-        <div class="flex items-center justify-between">
+    <footer class="border-b border-[#2B3D51] mt-[120px] mx-[96px] mb-[33px]">
+        <div class="flex items-center justify-between  text-[#0A142F] mb-[32px]">
             <div class="flex font-semibold text-[19px] leading-[23px] w-1/2 justify-between">
                 <a href="http://">About us</a>
                 <a href="http://">Training</a>
@@ -261,11 +261,21 @@
                 <a href="http://">Features</a>
             </div>
     
-            <div>
-                <i class="fa-brands fa-square-facebook"></i>
-                <i class="fa-brands fa-youtube"></i>
+            <div class="gap-[47px] flex">
+                <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                <i class="fa-brands fa-youtube fa-2xl"></i>
             </div>
         </div>
     </footer>
+
+    <div>
+        <p>© 2022.</p>
+
+        <h1>Meelah'sThriftStore</h1>
+
+        <span>
+            <a href="http://"></a>
+        </span>
+    </div>
 </body>
 </html>
