responsive design changes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
 
 
-            <div class="flex gap-[22px] lg:pb-[100px]">
+            <div class="flex gap-[22px] lg:pb-[100px] pb-[40px]">
                 <img src="dist/images/pic1.jpg" alt="" srcset="" class="basis-1/2 max-w-[50%]">
 
                 <div class="flex flex-col md:gap-10 gap-5">
@@ -101,23 +101,23 @@
         </div>
     </header>
 
-    <section class="flex justify-between items-start pb-10 lg:px-[100px]">
-        <span class="relative">
-            <img src="dist/images/Frame.svg" alt="" class="absolute -left-3">
+    <section class="flex flex-col md:flex-row justify-between items-start pb-10 lg:px-[100px] ">
+        <span class="relative flex justify-center w-full md:w-fit">
+            <img src="dist/images/Frame.svg" alt="" class="absolute md:-left-3 left-[5.0rem]">
             <h2 class="font-semibold text-[32px] leading-[51px]">
-                Why <br>
+                Why <br class="hidden md:block">
                 Choosing Us
             </h2>
         </span>
 
 
-        <div>
+        <div class="md:flex flex-col justify-center items-center w-full md:w-fit text-center md:text-start pb-5 md:pb-0">
             <span class="relative">
-                <img src="dist/images/Line.svg" alt="" srcset="" class="absolute top-4 -left-4 -z-10">
+                <img src="dist/images/Line.svg" alt="" srcset="" class="absolute top-4 md:-left-4 -left-[5rem] -z-10">
                 <h3 class="font-semibold text-[20px] leading-8">Luxury Quality</h3>
             </span>
 
-            <p class="text-[16px] leading-[22px] font-normal text-[#3D3D3DB2]">
+            <p class="text-[16px] leading-[22px] font-normal text-[#3D3D3DB2] ">
                 We offer quality pieces that are <br>
                 Our wears are made with the <br>
                 highest quality fabrics and <br>
@@ -125,9 +125,9 @@
             </p>
         </div>
 
-        <div>
+        <div class="md:flex flex-col justify-center items-center w-full md:w-fit text-center md:text-start pb-5 md:pb-0">
             <span class="relative">
-                <img src="dist/images/Line.svg" alt="" srcset="" class="absolute top-4 -left-4 -z-10">
+                <img src="dist/images/Line.svg" alt="" srcset="" class="absolute top-4 -left-4 md:-left-4 -left-[6rem] -z-10">
                 <h3 class="font-semibold text-[20px] leading-8">Hand-Dyed Fabric</h3>
             </span>
 
@@ -138,9 +138,9 @@
             </p>
         </div>
 
-        <div>
+        <div class="md:flex flex-col justify-center items-center w-full md:w-fit text-center md:text-start">
             <span class="relative">
-                <img src="dist/images/Line.svg" alt="" srcset="" class="absolute top-4 -left-4 -z-50">
+                <img src="dist/images/Line.svg" alt="" srcset="" class="absolute top-4 -left-4 md:-left-4 -left-[5rem] -z-50">
                 <h3 class="font-semibold text-[20px] leading-8">Affordable Price</h3>
             </span>
 
@@ -154,8 +154,8 @@
     </section>
 
     <section class="pt-[87px] lg:px-[100px]">
-        <div class="flex lg:gap-[91px]">
-            <div class="grid grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%]">
+        <div class="flex flex-col md:flex-row lg:gap-[91px]">
+            <div class="grid  grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%]">
                 <img src="dist/images/pic4.jpg" alt="" srcset="">
                 <img src="dist/images/pic5.jpg" alt="" srcset="">
                 <img src="dist/images/pic6.jpg" alt="" srcset="">
