--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </h1>
         
                     <div class="flex lg:justify-end justify-center">
-                        <img src="dist/images/Line 22.svg" alt="" srcset="" class="lg:mr-8 ml-[9.5rem] lg:ml-0 max-w-[30%] lg:max-w-[100%]">
+                        <img src="dist/images/Line 22.svg" alt="" srcset="" class=" ml-[9.5rem] lg:ml-0 max-w-[30%] lg:max-w-[100%]">
                     </div>
                 </div>
     
@@ -90,12 +90,12 @@
             </div>
 
 
-            <div class="flex gap-[22px] lg:pb-[100px] pb-[40px]">
+            <div class="flex gap-[22px] lg:pb-[100px] pb-[40px] basis-[45%]">
                 <img src="dist/images/pic1.jpg" alt="" srcset="" class="basis-1/2 max-w-[50%]">
 
                 <div class="flex flex-col md:gap-10 gap-5">
-                    <img src="dist/images/pic2.jpg" alt="" srcset="">
-                    <img src="dist/images/pic3.jpg" alt="" srcset="">
+                    <img src="dist/images/pic2.jpg" alt="" srcset="" class="">
+                    <img src="dist/images/pic3.jpg" alt="" srcset="" class="">
                 </div>
             </div>
         </div>
@@ -246,7 +246,7 @@
             <p class="font-normal leading-10 lg:text-[33px] md:text-[20px] text-[10px] text-[#ffffff] font-['Montserrat']">Subscribe Broadcast</p>
 
             <span class="relative basis-[60%] font-['Source Sans Pro']">
-                <input type="email" name="email" id="mail" placeholder="Enter your email" class="md:py-[30px] py-[20px] px-[8px] md:px-[28px] md:w-[500px] w-full rounded-[5px] outline-none placeholder:text-[#2B3D51] placeholder:text-[10px] md:placeholder:text-[16px]">
+                <input type="email" name="email" id="mail" placeholder="Enter your email" class="md:py-[30px] py-[20px] px-[8px] md:px-[28px]  w-full rounded-[5px] outline-none placeholder:text-[#2B3D51] placeholder:text-[10px] md:placeholder:text-[16px]">
                 <a href="mailto:" class="font-normal leading-[23px] md:text-[19px] text-[7px] md:py-[18.66px] md:px-[44.33px] px-2 py-2 text-[#ffffff] bg-[#333333] absolute top-[10px] lg:right-[35px] right-[12px] border border-[#333333] hover:bg-transparent hover:text-[#333333]">Subscribe Now</a>
             </span>
         </div>
