added animation on scroll

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
     </header>
 
     <!--second website section  -->
-    <section class="flex flex-col md:flex-row justify-between items-start pb-10 xl:px-[100px] px-5">
+    <section class="flex flex-col md:flex-row justify-between items-start pb-10 xl:px-[100px] px-5" data-aos="slide-up" data-aos-duration="3000">
         <span class="relative flex justify-center w-full md:w-fit font-['Montserrat']">
             <img src="dist/images/Frame.svg" alt="" class="absolute md:-left-3 left-[3.0rem]">
-            <h2 class="font-semibold text-[32px] md:text-[24px] lg:text-[32px] leading-[51px]">
+            <h2 class="font-semibold text-[32px] md:text-[24px] lg:text-[32px] leading-[51px]" >
                 Why <br class="hidden md:block">
                 Choose Us
             </h2>
@@ -171,10 +171,10 @@
     <section class="pt-[87px] xl:px-[100px] px-5">
         <div class="flex flex-col md:flex-row md:gap-[91px] gap-6">
             <div class="grid  grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%]">
-                <img src="dist/images/pic4.jpg" alt="" srcset="">
-                <img src="dist/images/pic5.jpg" alt="" srcset="">
-                <img src="dist/images/pic6.jpg" alt="" srcset="">
-                <img src="dist/images/pic7.jpg" alt="" srcset="">
+                <img src="dist/images/pic4.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
+                <img src="dist/images/pic5.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
+                <img src="dist/images/pic6.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
+                <img src="dist/images/pic7.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
             </div>
 
             <div class="flex flex-col justify-start items-start">
