added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/54e86b48e4.js" crossorigin="anonymous"></script>
     <title>MEELAH'S THRIFT STORE</title>
 </head>
-<body class="">
+<body class="scroll-smooth">
     <header class="xl:px-[100px] px-5 ">
 
         <!-- website navigation (logo,register, log in)-->
