--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </span>
                     </a>
     
-                    <a href="http://" class="">
+                    <a href="https://www.instagram.com/invites/contact/?i=756pks9s22ru&utm_content=kis5ech" class="">
                         <span class="flex ">
                             <img src="dist/images/video-circle.svg" alt="">
                             <p class="text-[#3D3D3D] md:text-[18px] text-[14px] leading-[23px] font-semibold font-['Source Sans Pro']">View Gallery</p>
@@ -104,11 +104,11 @@
 
 
             <div class="flex gap-[22px] lg:pb-[100px] pb-[40px] basis-[45%]">
-                <img src="dist/images/pic1.jpg" alt="" srcset="" class="basis-1/2 max-w-[50%]" data-aos="zoom-in" data-aos-duration="3000">
+                <img src="dist/images/img001.jpg" alt="" srcset="" class="basis-1/2 max-w-[50%]" data-aos="zoom-in" data-aos-duration="3000">
 
                 <div class="flex flex-col md:gap-10 gap-5">
-                    <img src="dist/images/pic2.jpg" alt="" srcset="" class="" data-aos="zoom-in" data-aos-duration="3000">
-                    <img src="dist/images/pic3.jpg" alt="" srcset="" class="" data-aos="zoom-in" data-aos-duration="3000">
+                    <img src="dist/images/img002.jpg" alt="" srcset="" class="" data-aos="zoom-in" data-aos-duration="3000">
+                    <img src="dist/images/img003.jpg" alt="" srcset="" class="" data-aos="zoom-in" data-aos-duration="3000">
                 </div>
             </div>
         </div>
@@ -170,11 +170,11 @@
     <!--section three of the webpage-->
     <section class="pt-[87px] xl:px-[100px] px-5">
         <div class="flex flex-col md:flex-row md:gap-[91px] gap-6">
-            <div class="grid  grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%]">
-                <img src="dist/images/pic4.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
-                <img src="dist/images/pic5.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
-                <img src="dist/images/pic6.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
-                <img src="dist/images/pic7.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="3000">
+            <div class="grid  grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%] place-items-center">
+                <img src="dist/images/img004.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
+                <img src="dist/images/img005.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
+                <img src="dist/images/img006.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
+                <img src="dist/images/img007.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
             </div>
 
             <div class="flex flex-col justify-start items-start">
@@ -209,28 +209,28 @@
     <section class="py-[76px] xl:px-[100px] px-5 font-['Montserrat']">
         <div class="relative md:my-8 font-['Montserrat']">
             <h1 class="font-bold text-[32px] md:text-[48px] text-[#333333] leading-[77px] absolute md:top-[1.5rem] top-[1.2rem]">New Arrivals</h1>
-            <h1 class="text-[#33333333] text-[50px] md:text-[96px] font-bold leading-[117px] " data-aos="zoom-in-up" data-aos-duration="3000">New Arrivals</h1>
+            <h1 class="text-[#33333333] text-[50px] md:text-[96px] font-bold leading-[117px] " data-aos="zoom-in-up" data-aos-duration="2000">New Arrivals</h1>
         </div>
 
         <div class="mt-[30px] flex md:flex-row  gap-[25px]">
             <div >
-                <img src="dist/images/tt1.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
+                <img src="dist/images/img008.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
 
             <div >
-                <img src="dist/images/tt1.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
+                <img src="dist/images/img009.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
             <div >
-                <img src="dist/images/tt1.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
+                <img src="dist/images/img010.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
             <div>
-                <img src="dist/images/tt1.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
+                <img src="dist/images/img011.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
@@ -285,8 +285,8 @@
             </div>
     
             <div class="md:gap-[47px] flex gap-5">
-                <i class="fa-brands fa-instagram fa-2xl text-[#0A142F] hover:text-[#B35920]"></i>
-                <i class="fa-brands fa-whatsapp fa-2xl text-[#0A142F] hover:text-[#B35920]"></i>
+                <a href="https://www.instagram.com/invites/contact/?i=756pks9s22ru&utm_content=kis5ech"><i class="fa-brands fa-instagram fa-2xl text-[#0A142F] hover:text-[#B35920]"></i></a>
+                <a href="https://wa.me/2348143623277"><i class="fa-brands fa-whatsapp fa-2xl text-[#0A142F] hover:text-[#B35920]"></i></a>
             </div>
         </div>
     </footer>
