--- a/index.html
+++ b/index.html
@@ -212,24 +212,24 @@
             <h1 class="text-[#33333333] text-[50px] md:text-[96px] font-bold leading-[117px] " data-aos="zoom-in-up" data-aos-duration="2000">New Arrivals</h1>
         </div>
 
-        <div class="mt-[30px] flex md:flex-row  gap-[25px]">
-            <div >
+        <div class="mt-[30px] flex flex-col md:flex-row  gap-[25px]">
+            <div class="flex flex-col" >
                 <img src="dist/images/img008.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
 
-            <div >
+            <div class="flex flex-col">
                 <img src="dist/images/img009.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
-            <div >
+            <div class="flex flex-col">
                 <img src="dist/images/img010.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
-            <div>
+            <div class="flex flex-col">
                 <img src="dist/images/img011.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
                 <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
