added changes to tailwin classes

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
 
             <div class="flex gap-[22px] lg:pb-[100px] pb-[40px] basis-[45%]">
-                <img src="dist/images/img001.jpg" alt="" srcset="" class="basis-1/2 max-w-[50%]" data-aos="zoom-in" data-aos-duration="3000">
+                <img src="dist/images/img001.jpg" alt="" srcset="" class="basis-1/2 max-w-[50%] rounded-[14px]" data-aos="zoom-in" data-aos-duration="3000">
 
                 <div class="flex flex-col md:gap-10 gap-5">
-                    <img src="dist/images/img002.jpg" alt="" srcset="" class="" data-aos="zoom-in" data-aos-duration="3000">
-                    <img src="dist/images/img003.jpg" alt="" srcset="" class="" data-aos="zoom-in" data-aos-duration="3000">
+                    <img src="dist/images/img002.jpg" alt="" srcset="" class="rounded-[14px]" data-aos="zoom-in" data-aos-duration="3000">
+                    <img src="dist/images/img003.jpg" alt="" srcset="" class="rounded-[14px]" data-aos="zoom-in" data-aos-duration="3000">
                 </div>
             </div>
         </div>
@@ -171,10 +171,10 @@
     <section class="pt-[87px] xl:px-[100px] px-5">
         <div class="flex flex-col md:flex-row md:gap-[91px] gap-6">
             <div class="grid  grid-cols-2 gap-y-[32px] gap-x-[42px] basis-[60%] place-items-center">
-                <img src="dist/images/img004.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
-                <img src="dist/images/img005.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
-                <img src="dist/images/img006.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
-                <img src="dist/images/img007.jpg" alt="" srcset="" data-aos="flip-left" data-aos-duration="2000">
+                <img src="dist/images/img004.jpg" alt="" class="rounded-[14px]" srcset="" data-aos="flip-left" data-aos-duration="2000">
+                <img src="dist/images/img005.jpg" alt="" class="rounded-[14px]" srcset="" data-aos="flip-left" data-aos-duration="2000">
+                <img src="dist/images/img006.jpg" alt="" class="rounded-[14px]" srcset="" data-aos="flip-left" data-aos-duration="2000">
+                <img src="dist/images/img007.jpg" alt="" class="rounded-[14px]" srcset="" data-aos="flip-left" data-aos-duration="2000">
             </div>
 
             <div class="flex flex-col justify-start items-start">
