added coming soon page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <a href="https://wa.me/2348143623277" class="hover:text-[#B35920]">Contact Us</a>
 
                 <div class=" font-bold lg:basis-[45%] text-[18px] justify-end leading-[23px] flex gap-[20px] font-['Source Sans Pro']">
-                    <a href="http://" class="text-[#B35920] border border-[#B35920] py-3 px-6 rounded-[10px] hover:text-[#ffffff] hover:bg-[#B35920]">Register</a>
-                    <a href="http://" class="bg-[#B35920] text-[#ffffff] py-3 px-6 rounded-[10px] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent">Login</a>
+                    <a href="Soon.html" class="text-[#B35920] border border-[#B35920] py-3 px-6 rounded-[10px] hover:text-[#ffffff] hover:bg-[#B35920]">Register</a>
+                    <a href="Soon.html" class="bg-[#B35920] text-[#ffffff] py-3 px-6 rounded-[10px] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent">Login</a>
                 </div>
             </div>
 
