added links to index

--- a/Soon.html
+++ b/Soon.html
@@ -14,7 +14,7 @@
     <title>Coming Soon</title>
 </head>
 <body>
-    <header>
+    <header class="bg-[url('/dist/images/pp1.jpeg')] bg-cover bg-center h-[100vh] xl:px-[100px] px-5">
         <!-- website navigation (logo,register, log in)-->
         <nav class="flex justify-between mb-16 items-center pt-10">
             <div class="logo">
@@ -42,6 +42,8 @@
                 <span class="bar"></span>
             </div>
         </nav>
+
+        <h1 class=""> COMING SOON</h1>
     </header>
     <!-- adding animation on scroll to the webpage -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
