--- a/index.html
+++ b/index.html
@@ -215,23 +215,23 @@
         <div class="mt-[30px] flex flex-col md:flex-row  gap-[25px]">
             <div class="flex flex-col" >
                 <img src="dist/images/img008.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
-                <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
+                <a href="https://wa.me/2348143623277" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
 
             <div class="flex flex-col">
                 <img src="dist/images/img009.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
-                <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
+                <a href="https://wa.me/2348143623277" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
             <div class="flex flex-col">
                 <img src="dist/images/img010.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
-                <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
+                <a href="https://wa.me/2348143623277" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
             <div class="flex flex-col">
                 <img src="dist/images/img011.jpeg" alt="" srcset="" class="md:rounded-t-[10px] rounded-t-[5px]">
-                <a href="http://" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
+                <a href="https://wa.me/2348143623277" class="flex justify-center md:py-[36px] py-[12px] font-bold md:text-[20px] text-[12px] text-[#ffffff] bg-[#B35920] border border-[#B35920] hover:text-[#B35920] hover:bg-transparent md:rounded-b-[10px] rounded-b-[5px]">Shop Now</a>
             </div>
 
             
@@ -255,7 +255,7 @@
                 training school.
             </p>
 
-            <a href="http://" class="text-[#B35920] border border-[#B35920] py-3 px-6 rounded-[10px] hover:text-[#ffffff] hover:bg-[#B35920] md:text-[18px] text-[12px] font-bold font-['Source Sans Pro']">Learn More</a>
+            <a href="Soon.html" class="text-[#B35920] border border-[#B35920] py-3 px-6 rounded-[10px] hover:text-[#ffffff] hover:bg-[#B35920] md:text-[18px] text-[12px] font-bold font-['Source Sans Pro']">Learn More</a>
         </div>
     </section>
 
